# py_assets_gmail_to_csv

./: .gitignore  README.md  analyze_investment.py  copilot_guide.md  download_attachments.py  extract_and_save.py  main.py  personal assets tracker architecture.drawio  pyproject.toml  requirements.txt
